--- a/index.html
+++ b/index.html
@@ -2,53 +2,66 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, user-scalable=no, 
+	<meta name="viewport" content="width=device-width, user-scalable=no,
 	initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/estilos.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<title>Acerca de Carlos Arturo</title>
+	<title>Hector Velez,Tecnico en Sistemas</title>
 </head>
 <body>
 	<div class="contenedor" id="contenedor">
 		<section class="tarjeta">
 			<div class="slider_banner">
 				<div class="banner" id="banner">
-					<img class="slide active" src="img/banner.jpg" alt="">
-					<img class="slide" src="img/banner2.jpg" alt="">
-					<img class="slide" src="img/banner3.jpg" alt="">
-					<img class="slide" src="img/banner4.jpg" alt="">
+					<img class="slide active" src="img/banner3.jpg" alt="">
+					<img class="slide" src="img/Hector.jpg" alt="">
+					<img class="slide" src="img/hector1.jpg" alt="">
+					<img class="slide" src="img/hector2.jpg" alt="">
+					<img class="slide" src="img/hector3.jpg" alt="">
+					<img class="slide" src="img/hector4.jpg" alt="">
+					<img class="slide" src="img/hector5.jpg" alt="">
+					<img class="slide" src="img/hector6.jpg" alt="">
+					<img class="slide" src="img/hector7.jpg" alt="">
 				</div>
 
 				<!-- Flechas del Banner -->
-				<a href="#" id="banner-prev" class="flecha-banner anterior"><span class="fa fa-chevron-left"></span></a>
-				<a href="#" id="banner-next" class="flecha-banner siguiente"><span class="fa fa-chevron-right"></span></a>
+				<a href="#" id="banner-prev" class="flecha-banner anterior"><span class="fa fa-chevron-circle-left"></span></a>
+				<a href="#" id="banner-next" class="flecha-banner siguiente"><span class="fa fa-chevron-circle-right"></span></a>
 			</div>
 
 			<section class="slider_info">
 				<!-- Flechas del Slider -->
-				<a href="#" id="info-prev" class="flecha-info anterior" ><span class="fa fa-chevron-left"></span></a>
-				<a href="#" id="info-next" class="flecha-info siguiente"><span class="fa fa-chevron-right"></span></a>
+				<a href="#" id="info-prev" class="flecha-info anterior" ><span class="fa fa-chevron-circle-left"></span></a>
+				<a href="#" id="info-next" class="flecha-info siguiente"><span class="fa fa-chevron-circle-right"></span></a>
 
 				<section class="informacion" id="informacion">
 					<article id="info">
 						<div class="slide active">
-							<h1 class="nombre">Carlos Arturo</h1>
-							<p class="trabajo">Desarrollador Web</p>
-							<p class="pais"><img src="img/bandera.png" alt="">Mexico</p>
-						</div>
-					
-						<div class="slide">
-							<h2 class="subtitulo">Incididunt ut labore et</h2>
-							<p class="texto">Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+							<h1 class="nombre">Hector Fabian Velez Alvarez</h1>
+							<p class="trabajo">Tecnico en Sistemas</p>
+							<p class="pais"><img src="img/bandera1.png" alt="">Colombia</p>
 						</div>
 
 						<div class="slide">
-							<h2 class="subtitulo">Cras pretium, quam sit amet.</h2>
-							<p class="texto">Nam semper, erat at eleifend pretium, sem nunc aliquam eros, ut ultricies dui felis vel augue. Etiam viverra dolor mauris, nec vehicula libero venenatis eu.
-							<br><br>
-							Aliquam nec tortor magna. Suspendisse condimentum feugiat malesuada. Quisque pretium ac nulla vitae tristique. Vivamus fringilla purus ut viverra porta.</p>
+							<p class="texto">Persona con capacidades para la aplicacion de habilidades, destrezas, valores y comportamientos sobre actividades productivas relacionadas con el ensamble, mantenimiento, actualización, instalación y configuracion de computadores, mantenimiento correctivo y preventivo de software, hardware y manejo de software ofimático.</p>
+						</div>
+
+						<div class="slide">
+							<h2 class="subtitulo">Ejercicios realizados en el curso de Programacion Basica.</h2>
+							<ul class="actions">
+							<li><a href="#" target="_blank" class="button">Dibujo en Canvas.</a></li><br />
+							</ul>
+							<ul class="actions">
+							<li><a href="#" target="_blank" class="button">Dibujo en Canvas Flechas del Teclado.</a></li><br />
+							</ul>
+							<ul class="actions">
+							<li><a href="#" target="_blank" class="button">Villa Plazi.</a></li><br />
+							</ul>
+							<ul class="actions">
+							<li><a href="#" target="_blank" class="button">Division, Modulo y Residuo en JacaScript.</a></li><br />
+						</ul>
+
 						</div>
 					</article>
 					<div class="botones" id="botones"></div>
@@ -57,7 +70,7 @@
 			</section>
 			<section class="redes-sociales">
 				<a href="#" class="behance"><span class="fa fa-behance"></span></a>
-				<a href="#" class="facebook"><span class="fa fa-facebook"></span></a>
+				<a href="https://www.facebook.com/Tecnico-Sistemas-Hector-Velez-1769183796437251/?hc_ref=ARRY0PG8D067y-Y6cNmxjs1ysf-3-rF1pc6T3ODVPJFksFEtAkuPzj-Mb-zhbJgCsp4/" target="_blank" class="facebook"><span class="fa fa-facebook"></span></a>
 				<a href="#" class="twitter"><span class="fa fa-twitter"></span></a>
 			</section>
 		</section>
