--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div class="slider_banner">
 				<div class="banner" id="banner">
 					<img class="slide active" src="img/banner3.jpg" alt="">
-					<img class="slide" src="img/Hector.jpg" alt="">
+					<img class="slide" src="img/hector.jpg" alt="">
 					<img class="slide" src="img/hector1.jpg" alt="">
 					<img class="slide" src="img/hector2.jpg" alt="">
 					<img class="slide" src="img/hector3.jpg" alt="">
@@ -50,16 +50,16 @@
 						<div class="slide">
 							<h2 class="subtitulo">Ejercicios realizados en el curso de Programacion Basica.</h2>
 							<ul class="actions">
-							<li><a href="#" target="_blank" class="button">Dibujo en Canvas.</a></li><br />
+							<li><a href="hectorvelez1984.github.io/dibujo1.html" target="_blank" class="button">Dibujo en Canvas.</a></li><br />
 							</ul>
 							<ul class="actions">
-							<li><a href="#" target="_blank" class="button">Dibujo en Canvas Flechas del Teclado.</a></li><br />
+							<li><a href="hectorvelez1984.github.io/flechas.html" target="_blank" class="button">Dibujo en Canvas Flechas del Teclado.</a></li><br />
 							</ul>
 							<ul class="actions">
-							<li><a href="#" target="_blank" class="button">Villa Plazi.</a></li><br />
+							<li><a href="hectorvelez1984.github.io/villa.html" target="_blank" class="button">Villa Plazi.</a></li><br />
 							</ul>
 							<ul class="actions">
-							<li><a href="#" target="_blank" class="button">Division, Modulo y Residuo en JacaScript.</a></li><br />
+							<li><a href="hectorvelez1984.github.io/modulo.html" target="_blank" class="button">Division, Modulo y Residuo en JacaScript.</a></li><br />
 						</ul>
 
 						</div>
