--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/estilos.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="font.css">
+  <link rel="stylesheet" href="main.css">
 	<title>Hector Velez,Tecnico en Sistemas</title>
 </head>
 <body>
+	<div class="social-bar">
+    <a href="https://www.facebook.com/Tecnico-Sistemas-Hector-Velez-1769183796437251/?hc_ref=ARRY0PG8D067y-Y6cNmxjs1ysf-3-rF1pc6T3ODVPJFksFEtAkuPzj-Mb-zhbJgCsp4/" class="icon icon-facebook" target="_blank"></a>
+    <a href="https://twitter.com/HECTORVELEZ2" class="icon icon-twitter" target="_blank"></a>
+    <a href="https://www.youtube.com/channel/UCNXp2lOjahilPRoKrDwb-EQ?view_as=subscriber" class="icon icon-youtube" target="_blank"></a>
+    <a href="https://www.instagram.com/hectorvelezalvarez/?hl=es-la" class="icon icon-instagram" target="_blank"></a>
+  </div>
 	<div class="contenedor" id="contenedor">
 		<section class="tarjeta">
 			<div class="slider_banner">
@@ -48,31 +56,27 @@
 						</div>
 
 						<div class="slide">
-							<h2 class="subtitulo">Ejercicios realizados en el curso de Programacion Basica.</h2>
-							<ul class="actions">
-							<li><a href="hectorvelez1984.github.io/dibujo1.html" target="_blank" class="button">Dibujo en Canvas.</a></li><br />
-							</ul>
-							<ul class="actions">
-							<li><a href="hectorvelez1984.github.io/flechas.html" target="_blank" class="button">Dibujo en Canvas Flechas del Teclado.</a></li><br />
-							</ul>
-							<ul class="actions">
-							<li><a href="hectorvelez1984.github.io/villa.html" target="_blank" class="button">Villa Plazi.</a></li><br />
-							</ul>
-							<ul class="actions">
-							<li><a href="hectorvelez1984.github.io/modulo.html" target="_blank" class="button">Division, Modulo y Residuo en JacaScript.</a></li><br />
-						</ul>
+									<h2 class="subtitulo">Ejercicios realizados en el curso de Programacion Basica.</h2>
+									<ul class="actions">
+									<li><a href="hectorvelez1984.github.io/dibujo1.html" target="_blank" class="button">Dibujo en Canvas.</a></li><br />
+									</ul>
+									<ul class="actions">
+									<li><a href="hectorvelez1984.github.io/flechas.html" target="_blank" class="button">Dibujo en Canvas Flechas del Teclado.</a></li><br />
+									</ul>
+									<ul class="actions">
+									<li><a href="hectorvelez1984.github.io/villa.html" target="_blank" class="button">Villa Plazi.</a></li><br />
+									</ul>
+									<ul class="actions">
+									<li><a href="hectorvelez1984.github.io/modulo.html" target="_blank" class="button">Division, Modulo y Residuo en JacaScript.</a></li><br />
+								</ul>
 
-						</div>
+								</div>
 					</article>
 					<div class="botones" id="botones"></div>
 				</section>
 
 			</section>
-			<section class="redes-sociales">
-				<a href="#" class="behance"><span class="fa fa-behance"></span></a>
-				<a href="https://www.facebook.com/Tecnico-Sistemas-Hector-Velez-1769183796437251/?hc_ref=ARRY0PG8D067y-Y6cNmxjs1ysf-3-rF1pc6T3ODVPJFksFEtAkuPzj-Mb-zhbJgCsp4/" target="_blank" class="facebook"><span class="fa fa-facebook"></span></a>
-				<a href="#" class="twitter"><span class="fa fa-twitter"></span></a>
-			</section>
+
 		</section>
 	</div>
 
