--- a/dibujo1.html
+++ b/dibujo1.html
@@ -8,14 +8,14 @@
     <title>Dibujando con canvas</title>
   </head>
   <body>
-    <h1>Dibujo en canvas</h1>
-    <p>
+	  <h1><center>Dibujo en canvas</center></h1>
+    <p><center>
       cuantas lineas quieres
       <input type="text" id="texto_lineas" />
       <input type="button" value="A darle!" id="botoncito" />
-    </p>
+	    </center></p>
     <canvas width="300" height="300" id="dibujito"></canvas>
-    <p>Asi queda tu dibujo</p>
+	  <p><center>Asi queda tu dibujo</center></p>
     <script src="dibujo1.js"></script>
   </body>
 </html>
