--- a/dibujo1.html
+++ b/dibujo1.html
@@ -14,7 +14,7 @@
       <input type="text" id="texto_lineas" />
       <input type="button" value="A darle!" id="botoncito" />
 	    </center></p>
-    <canvas width="300" height="300" id="dibujito"></canvas>
+	  <center><canvas width="300" height="300" id="dibujito"></canvas></center>
 	  <p><center>Asi queda tu dibujo</center></p>
     <script src="dibujo1.js"></script>
   </body>
