--- a/dibujo1.html
+++ b/dibujo1.html
@@ -13,9 +13,9 @@
       cuantas lineas quieres
       <input type="text" id="texto_lineas" />
       <input type="button" value="A darle!" id="botoncito" />
-	    </p></ br>
+	    </p>
 	  <canvas width="300" height="300" id="dibujito"></canvas>
-	  <p><center>Asi queda tu dibujo</center></p>
+	  <p>Asi queda tu dibujo</center></p>
     <script src="dibujo1.js"></script>
   </body>
 </html>
