--- a/dibujo1.html
+++ b/dibujo1.html
@@ -9,13 +9,13 @@
   </head>
   <body>
 	  <h1><center>Dibujo en canvas</center></h1>
-    <p><center>
+    <p>
       cuantas lineas quieres
       <input type="text" id="texto_lineas" />
       <input type="button" value="A darle!" id="botoncito" />
 	    </p>
 	  <canvas width="300" height="300" id="dibujito"></canvas>
-	  <p>Asi queda tu dibujo</center></p>
+	  <p>Asi queda tu dibujo</p>
     <script src="dibujo1.js"></script>
   </body>
 </html>
