--- a/villa.html
+++ b/villa.html
@@ -8,8 +8,8 @@
     <title>Villa Plazi</title>
   </head>
   <body>
-    <h1><center>Villa Platzi</center></h1>
-    <h3><center>Presiona F5 y saldran aleatoriamente los Animales.</center></h3>
+	  <h1><center>Villa Platzi</center></h1></ br>
+	<h3><center>Presiona F5 y saldran aleatoriamente los Animales.</center></h3></ br>
       <canvas id="villaplatzi" width="500" height="500"></canvas>    
       <script src="platzi.js"></script>
      </body>
