--- a/dibujo1.html
+++ b/dibujo1.html
@@ -8,6 +8,7 @@
     <title>Dibujando con canvas</title> 
   </head>
   <body>
+	  <div class="contenedor" id="contenedor">
 	  <h1><center>Dibujo en canvas</center></h1>
     <p><center>
       cuantas lineas quieres
@@ -16,6 +17,7 @@
 	    </p>
 	  <canvas width="300" height="300" id="dibujito"></canvas>
 	  <p>Asi queda tu dibujo</center></p>
+	</div>	
     <script src="dibujo1.js"></script>
   </body>
 </html>
