--- a/villa.html
+++ b/villa.html
@@ -9,7 +9,7 @@
   </head> 
   <body>
 	  <h1><center>Villa Platzi</center></h1></ br>
-	<h3><center>Presiona F5 y saldran aleatoriamente los Animales.</center></h3></ br>
+	<h3><center>Presiona F5 o carga de nuevo la pagina y saldran aleatoriamente los Animales.</center></h3></ br>
       <canvas id="villaplatzi" width="500" height="500"></canvas>    
       <script src="platzi.js"></script>
      </body>
