--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
 		 <a href="https://www.youtube.com/channel/UCNXp2lOjahilPRoKrDwb-EQ?view_as=subscriber" class="icon icon-youtube" target="_blank"></a>
   		 <a href="https://www.instagram.com/hectorvelezalvarez/?hl=es-la" class="icon icon-instagram" target="_blank"></a>
   		</div>
+	
+		<div class="social-bar1">
+   		 <a href="https://www.facebook.com/Tecnico-Sistemas-Hector-Velez-1769183796437251/?hc_ref=ARRY0PG8D067y-Y6cNmxjs1ysf-3-rF1pc6T3ODVPJFksFEtAkuPzj-Mb-zhbJgCsp4/" class="icon icon-facebook" target="_blank"></a>
+		 <a href="https://twitter.com/HECTORVELEZ2" class="icon icon-twitter" target="_blank"></a>
+		 <a href="https://www.youtube.com/channel/UCNXp2lOjahilPRoKrDwb-EQ?view_as=subscriber" class="icon icon-youtube" target="_blank"></a>
+  		 <a href="https://www.instagram.com/hectorvelezalvarez/?hl=es-la" class="icon icon-instagram" target="_blank"></a>
+  		</div>
 	<section class="tarjeta">
 		<div class="slider_banner">
 			<div class="banner" id="banner">
