--- a/dibujo1.html
+++ b/dibujo1.html
@@ -9,8 +9,8 @@
   </head>
   <body>
 	  
-	  <h1><center>Dibujo en canvas</h1>
-    <p>
+	  <h1><center>Dibujo en canvas</center></h1>
+    <p><center>
       cuantas lineas quieres
       <input type="text" id="texto_lineas" />
       <input type="button" value="A darle!" id="botoncito" />
