--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
 				</section>
 
 			</section>
+				<section class="redes-sociales">
+				<a href="#" class="behance"><span class="fa fa-behance"></span></a>
+				<a href="#" class="facebook"><span class="fa fa-facebook"></span></a>
+				<a href="#" class="twitter"><span class="fa fa-twitter"></span></a>
+			</section>
 
 		</section>
 </div>
