--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
 						<div class="slide">
 							<p class="texto">Persona con capacidades para la aplicacion de habilidades, destrezas, valores y comportamientos sobre actividades productivas relacionadas con el ensamble, mantenimiento, actualización, instalación y configuracion de computadores, mantenimiento correctivo y preventivo de software, hardware y manejo de software ofimático.</p>
 						</div>
+						
+						<div class="video">
+							<p class="texto">Video Instalacion Windows 7.</p>
+							
+						</div>
 
 						<div class="slide">
 									<h2 class="subtitulo">Ejercicios realizados en el curso de Programacion Basica.</h2>
