--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<p class="texto">Persona con capacidades para la aplicacion de habilidades, destrezas, valores y comportamientos sobre actividades productivas relacionadas con el ensamble, mantenimiento, actualización, instalación y configuracion de computadores, mantenimiento correctivo y preventivo de software, hardware y manejo de software ofimático.</p>
 						</div>
 						
-						<div class="video">
+						<div class="slide">
 							<p class="texto">Video Instalacion Windows 7.</p>
 							
 						</div>
