--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<title>Hector Velez,Tecnico en Sistemas</title>
 </head>
 <body>
-	<a href="https://www.contadorvisitasgratis.com" title="contador de visitas wordpress"><img src="https://counter6.allfreecounter.com/private/contadorvisitasgratis.php?c=318kz6bb96lpfg5el83eb3nbqjuws1c2" border="0" title="contador de visitas wordpress" alt="contador de visitas wordpress"></a>
+	<a href="https://www.contadorvisitasgratis.com" title="contador de visitas html codigo"><img src="https://counter8.allfreecounter.com/private/contadorvisitasgratis.php?c=gmeczs3rmntc3513719cprznzacqpk36" border="0" title="contador de visitas html codigo" alt="contador de visitas html codigo"></a>
 	
 <div class="contenedor" id="contenedor">
 		<div class="social-bar">
