--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 						
 						<div class="slide">
 							<p class="texto">Video Instalacion Windows 7.</p>
-							
+							<video controls="controls" widht="400" height="300">
+							<source src="#" type="video/mp4">
+							</video>
 						</div>
 
 						<div class="slide">
