--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 						</div>
 						
 						<div class="slide">
-							<p class="texto">Video Instalacion Windows 7.</p>
+							<p class="texto">Video Instalacion Windows 7 en Maquina Virtual.</p>
 							<video controls="controls" widht="400" height="300">
-							<source src="#" type="video/mp4">
+							<source src="videos/instalar windows 7.mp4" type="video/mp4">
 							</video>
 						</div>
 
