--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						
 						<div class="slide">
 							<p class="texto">Video Instalacion Windows 7 en Maquina Virtual.</p>
-							<video controls="controls" widht="400" height="300">
+							<video controls="controls" widht="40%" height="30%">
 							<source src="videos/instalar windows 7.mp4" type="video/mp4">
 							</video>
 						</div>
