--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<p class="texto">Persona con capacidades para la aplicacion de habilidades, destrezas, valores y comportamientos sobre actividades productivas relacionadas con el ensamble, mantenimiento, actualización, instalación y configuracion de computadores, mantenimiento correctivo y preventivo de software, hardware y manejo de software ofimático.</p>
 						</div>
 						
-						<div class="slide" class="video-responsive">
+						<div class="slide" class="contenedor">
 							<p class="texto">Video Instalacion Windows 7 en Maquina Virtual.</p>
 							<video controls="controls" widht="40%" height="30%">
 							<source src="videos/instalar windows 7.mp4" type="video/mp4">
