--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   		 <a href="https://www.instagram.com/hectorvelezalvarez/?hl=es-la" class="icon icon-instagram" target="_blank"></a>
   		</div>
 
+	<div class="contenedor" id="contenedor">
 	<section class="tarjeta">
 		<div class="slider_banner">
 			<div class="banner" id="banner">
@@ -68,16 +69,16 @@
 						<div class="slide">
 									<h2 class="subtitulo">Ejercicios realizados en el curso de Programacion Basica.</h2>
 									<ul class="actions">
-									<li><a href="hectorvelez1984.github.io/dibujo1.html" target="_blank" class="button">Dibujo en Canvas.</a></li><br />
+									<li><a href="dibujo1.html" target="_blank" class="button">Dibujo en Canvas.</a></li><br />
 									</ul>
 									<ul class="actions">
-									<li><a href="hectorvelez1984.github.io/flechas.html" target="_blank" class="button">Dibujo en Canvas Flechas del Teclado.</a></li><br />
+									<li><a href="flechas.html" target="_blank" class="button">Flechas del Teclado.</a></li><br />
 									</ul>
 									<ul class="actions">
-									<li><a href="hectorvelez1984.github.io/villa.html" target="_blank" class="button">Villa Plazi.</a></li><br />
+									<li><a href="villa.html" target="_blank" class="button">Villa Plazi.</a></li><br />
 									</ul>
 									<ul class="actions">
-									<li><a href="hectorvelez1984.github.io/modulo.html" target="_blank" class="button">Division, Modulo y Residuo en JacaScript.</a></li><br />
+									<li><a href="modulo.html" target="_blank" class="button">Division, Modulo y Residuo.</a></li><br />
 								</ul>
 
 								</div>
