--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 				<img class="slide" src="img/hector5.jpg" alt="">
 				<img class="slide" src="img/hector6.jpg" alt="">
 				<img class="slide" src="img/hector7.jpg" alt="">
+				<img class="slide" src="img/hector8.jpg" alt="">
 			</div>
 
 				<!-- Flechas del Banner -->
